# gemini-research-mcp

./: .env.example  .gitignore  .mcpbignore  CHANGELOG.md  README.md  latest-changes-review.md  latest-commits-review.md  manifest.json  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.mmd  workflow-elk.excalidraw  workflow.excalidraw
scripts/: create_diagram.py  gemini_usage.py  publish.sh  query_billing_export.py  setup_billing_export.sh  vscode_e2e_test.py
scripts/protocol_servers/: official_mcp_fastmcp_server.py  third_party_fastmcp_server.py
src/gemini_research_mcp/: __init__.py  citations.py  clarifier.py  config.py  content.py  deep.py  export.py  quick.py  server.py  storage.py  templates.py  types.py
tests/: test_batch.py  test_cancellation.py  test_citations.py  test_clarifier.py  test_config.py  test_content.py  test_context_in_tasks.py  test_core.py  test_e2e.py  test_e2e_input_required.py  test_e2e_mcp_transport.py  test_elicitation.py  test_export.py  test_fastmcp_compat.py  test_mcp_server_tools.py  test_progress_reporting.py  test_protocol_stdio_progress.py  test_raw_deep_research.py  test_resume_cleanup.py  test_sampling_clarification.py  test_session_matching.py  test_storage.py  test_streaming.py  test_task_execution_mode.py  test_templates.py  test_tool_search.py  test_types.py  test_v2_features.py  test_vscode_task_behavior.py
vscode-extension/: .vscodeignore  README.md  gemini-research-mcp-0.11.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
