[project]
name = "gemini-research-mcp"
version = "0.1.3"
description = "MCP server for AI-powered research using Gemini grounding with background tasks support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Guillaume Fortaine", email = "guillaume.fortaine+github@machinemates.ai" }
]
keywords = [
    "mcp",
    "gemini",
    "research",
    "grounding",
    "google",
    "ai",
    "web-search",
    "background-tasks",
    "deep-research",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "google-genai>=1.59.0",
    "mcp>=1.25.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/fortaine/gemini-research-mcp"
Repository = "https://github.com/fortaine/gemini-research-mcp"
Issues = "https://github.com/fortaine/gemini-research-mcp/issues"

[project.scripts]
gemini-research-mcp = "gemini_research_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_research_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that require GEMINI_API_KEY",
]
addopts = "-m 'not e2e'"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
